# arousal-integration-validation

./: .gitignore  FIXES.md  README.md  STATUS.md  pyproject.toml
docs/: ARCHITECTURAL_RATIONALE.md  INDEX.md  OVERVIEW.md  QUICK_START.md  THEORETICAL_FOUNDATIONS.md
src/: __init__.py
src/agents/: __init__.py
src/environment/: __init__.py  social_gridworld.py
src/modules/: __init__.py
src/utils/: __init__.py  arousal.py
tests/: test_environment.py
