[project]
name = "arousal-integration-validation"
version = "0.1.0"
description = "Tier 1 validation of arousal-weighted integration in modular RL agents"
authors = [{name = "angrysky56"}]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0.0",
    "matplotlib>=3.9.0",
    "scipy>=1.14.0",
    "pandas>=2.2.0",
    "seaborn>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
